Prevent uploading too large image file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1034,6 +1034,7 @@ button.toggle,
 button[disabled],
 .button[disabled] {
     background: var(--color-button-disabled);
+    cursor: not-allowed;
 }
 
 button.left,
